kubernetes/production-cluster/helloworld/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld-deployment
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
