kubernetes/production-cluster/helloworld/helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: helloworld.info-tls
      hosts:
        - helloworld.info
  rules:
  - host: helloworld.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service
            port:
              number: 80
